# cobos-apple-mail-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  NOTICE  README.md  RESEARCH.md  config.toml.example  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
docs/: CNAME  index.html
docs/wiki/: Apple-Mail-on-disk-format.md  Architecture.md  Configuration-reference.md  Development-and-contributing.md  Home.md  Identity-and-resolution.md  Indexing-and-watch.md  Install-per-client.md  Performance-and-benchmarks.md  Permissions-and-troubleshooting.md  Resources-and-prompts-recipes.md  Safety-confirmation-and-undo.md  Search.md  Single-file-packaging.md  Threading-and-knowledge.md  Tools-reference.md
scripts/: build_pyz.sh  check_docs_sync.py  install-claude-desktop.sh  install.sh  publish_wiki.sh
src/cobos_apple_mail_mcp/: __init__.py  __main__.py  cli.py  config.py  server.py
src/cobos_apple_mail_mcp/core/: errors.py  flags.py  identity.py  models.py  paths.py  resolver.py  safety.py  text.py  undo.py
src/cobos_apple_mail_mcp/knowledge/: analytics.py  contacts.py  triage.py
src/cobos_apple_mail_mcp/read/: account_names.py  attachment_extract.py  emlx_parser.py  envelope_reader.py  indexer.py  llm_helper.py  rowmap.py  search.py  threader.py  vector_search.py  watcher.py
src/cobos_apple_mail_mcp/resources/: email_resources.py
src/cobos_apple_mail_mcp/skills/: loader.py
src/cobos_apple_mail_mcp/skills/awaiting-reply/: prompt.md  recipe.yaml
src/cobos_apple_mail_mcp/skills/daily-triage/: prompt.md  recipe.yaml
src/cobos_apple_mail_mcp/skills/inbox-zero/: prompt.md  recipe.yaml
src/cobos_apple_mail_mcp/skills/thread-catchup/: prompt.md  recipe.yaml
src/cobos_apple_mail_mcp/skills/weekly-review/: prompt.md  recipe.yaml
src/cobos_apple_mail_mcp/storage/: database.py  migrations.py
src/cobos_apple_mail_mcp/tools/: knowledge_tools.py  reading.py  search_tools.py  write_tools.py
src/cobos_apple_mail_mcp/write/: attachments.py  compose.py  drafts.py  jxa_executor.py  organize.py  rules.py  unsubscribe.py
src/cobos_apple_mail_mcp/write/scripts/: mail_core.js
swift/foundation-models-summarizer/: Package.swift  README.md
swift/foundation-models-summarizer/Sources/foundation-models-summarizer/: main.swift
tests/: helpers.py  test_account_names.py  test_analytics.py  test_attachment_extract.py  test_contacts.py  test_emlx_parser.py  test_flag_colors.py  test_indexer.py  test_jxa_executor.py  test_llm_helper.py  test_resolver.py  test_rules.py  test_search.py  test_server_params.py  test_skills_loader.py  test_threader.py  test_triage.py  test_unsubscribe.py  test_vector_search.py  test_watcher.py  test_write_layer.py
